--- a/Practica25/Practica25/Components/Account/Pages/ExternalLogin.razor
+++ b/Practica25/Practica25/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
