--- a/Practica25/Practica25/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/Practica25/Practica25/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
