--- a/Practica25/Practica25/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/Practica25/Practica25/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/ResetAuthenticator"
 
 @using Microsoft.AspNetCore.Identity
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
