--- a/Practica25/Practica25/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/Practica25/Practica25/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Identity
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
