--- a/Practica25/Practica25/Components/Account/Pages/RegisterConfirmation.razor
+++ b/Practica25/Practica25/Components/Account/Pages/RegisterConfirmation.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
