--- a/Practica25/Practica25/Components/Account/Pages/ResetPassword.razor
+++ b/Practica25/Practica25/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
