--- a/Practica25/Practica25/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/Practica25/Practica25/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
