--- a/Practica25/Practica25/Components/Account/Shared/ManageNavMenu.razor
+++ b/Practica25/Practica25/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Practica25.Data
+@using Practica25.Infrastructure.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 
