--- a/Practica25/Practica25/Components/Layout/NavMenu.razor
+++ b/Practica25/Practica25/Components/Layout/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿@implements IDisposable
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@implements IDisposable
 
 @inject NavigationManager NavigationManager
 
@@ -52,6 +55,11 @@
                         </button>
                     </form>
                 </div>
+                    <div class="nav-item px-3">
+                         <NavLink class="nav-link" href="products">
+                              <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Products
+                         </NavLink>
+                    </div>
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
@@ -64,6 +72,7 @@
                         <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
                     </NavLink>
                 </div>
+                    
             </NotAuthorized>
         </AuthorizeView>
     </nav>
